--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,18 @@ Thumbs.db
 #ignore files build by Visual Studio
 *.obj
 *.exe
+*.json
+*.udf
+*.ccs
+*.dll
+
 
 #ignore Android SDK, NDK, Eclipse plugin and ANT files
 libs/
 bin/
 obj/
 assets/
+cocosstudio/
+proj.android/
+proj.ios_mac/
+Debug.win32/
